migrate to java11,update deps
Signed-off-by: wooyea <wooyea@gmail.com>